For a complete log of changes to Hamlib, please visit:

http://sourceforge.net/p/hamlib/code/commit_browser