@@ -2399,7 +2399,8 @@ rigerror HAMLIB_PARAMS((int errnum));
 extern HAMLIB_EXPORT(int)
 rig_setting2idx HAMLIB_PARAMS((setting_t s));
 
-extern setting_t rig_idx2setting(int i);
+extern HAMLIB_EXPORT(setting_t)
+rig_idx2setting(int i);
 /*
  * Even if these functions are prefixed with "rig_", they are not rig specific
  * Maybe "hamlib_" would have been better. Let me know. --SF
