@@ -431,11 +431,13 @@ int prm80_get_level(RIG *rig, vfo_t vfo, setting_t level, value_t *val)
     switch (level)
     {
     case RIG_LEVEL_AF:
+        // cppcheck-suppress *
         val->f = chan.levels[LVL_AF].f;
 
         break;
 
     case RIG_LEVEL_SQL:
+        // cppcheck-suppress *
         val->f = chan.levels[LVL_SQL].f;
 
         break;
