@@ -1,3 +1,10 @@
 For a complete log of changes to Hamlib, please visit:
 
 http://sourceforge.net/p/hamlib/code/commit_browser
+
+Major changes in 4.0 affecting usage
+Most rig model numbers have changed
+RIG_LEVEL_VOX has been deprecated and replaced by RIG_LEVEL_VOXDELAY
+rigctl 'f' command now returns VFO argument too
+rigctl 'y' and 'Y' command now take/show antenna argument and option.
+range_list items are undergoing changes towards a different model TBD
